# tess-3iatlas

./: README.md  pyproject.toml
data/: 3i_lsst.csv  3i_mpc_20250726.xml  3i_mpc_20250729.xml  3i_s0092_1-2_ephem.csv  3i_s0092_1-2_images.npz  3i_s0092_1-2_lc.csv  3i_s0092_2-3_ephem.csv  3i_s0092_2-3_images.npz  3i_s0092_2-3_lc.csv  3i_tess_s0092_mpc.xml  3i_tess_s0092_time_series.csv
notebooks/: 3i_mpc_xml.ipynb  3i_paper_plots.ipynb  3i_tess_future.ipynb
